--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -36,7 +36,7 @@
                                     </a>
 
                                     <a class="dropdown-item" asp-controller="Publicadores" asp-action="Listar">
-                                        Listar
+                                        Buscar Publicador
                                     </a>
 
                                 </div>
@@ -48,13 +48,13 @@
                                     aria-haspopup="true" aria-expanded="false">Relatórios
                                 </a>
                                 <div class="dropdown-menu">
+
+                                    <a class="dropdown-item" asp-controller="Relatorios" asp-action="Criar">
+                                        Criar Relatórios
+                                    </a>
                                     
                                     <a class="dropdown-item" asp-controller="Relatorios" asp-action="Listar">
                                         buscar Relatórios
-                                    </a>
-                                    
-                                    <a class="dropdown-item" asp-controller="Relatorios" asp-action="Criar">
-                                        Criar Relatórios
                                     </a>
 
                                     <a class="dropdown-item" asp-controller="Relatorios" asp-action="Resumo">
