Arrumei lsita de publicadores

--- a/Views/Publicadores/Listar.cshtml
+++ b/Views/Publicadores/Listar.cshtml
@@ -10,7 +10,7 @@
 
 <form class="row gx-3 gy-2 align-items-center mb-5" method='get'>
     <div class="col-md-6 input-group mb-3">
-        <label class="input-group-text" for="inputGroupSelect01">Publicador</label>
+        <label class="input-group-text" for="inputGroupSelect01">Grupos</label>
         <select class="form-select" name="grupoDeCampo">
             <option value="">Selecione um Grupo</option>
             <option value="Grupo do Alexandre">Grupo do Alexandre</option>
