--- a/Views/Publicadores/Criar.cshtml
+++ b/Views/Publicadores/Criar.cshtml
@@ -16,7 +16,7 @@
 
     <div class="row">
         <div class="col-md-6 input-group mb-3">
-            <label class="input-group-text" for="inputGroupSelect01">Publicador</label>
+            <label class="input-group-text" for="inputGroupSelect01">Grupos</label>
             <select class="form-select" name="grupoDeCampo">
                 <option value="">Selecione um Grupo</option>
                 <option value="Grupo do Alexandre">Grupo do Alexandre</option>
