Criei publicadores inativos

--- a/Views/Publicadores/Pendentes.cshtml
+++ b/Views/Publicadores/Pendentes.cshtml
@@ -16,7 +16,7 @@
     </div>
     <div class="col-auto">
         <button class="btn btn-outline-primary" type="submit">
-            <em class="fas fa-search"></em> Analizar
+            <em class="fas fa-search"></em> Analisar
         </button>
     </div>
     
