--- a/Views/Relatorios/Resumo.cshtml
+++ b/Views/Relatorios/Resumo.cshtml
@@ -15,7 +15,7 @@
     </div>
     <div class="col-auto">
         <button class="btn btn-outline-primary" type="submit">
-            <em class="fas fa-search"></em> Analizar
+            <em class="fas fa-search"></em> Analisar
         </button>
     </div>
     
@@ -34,6 +34,22 @@
 
                 <a asp-controller="Publicadores" asp-action="Pendentes">
                     Publicadores pendentes
+                </a>
+
+            </div>
+        </div>
+    </div>
+
+    <div class='col-md-6 col-lg-3 mb-2'>
+        <div class="card">
+            <div class="card-body">
+
+                <h2 class='mt-4'>
+                    @Model.totalDePublicadoresInativos
+                </h2>
+
+                <a asp-controller="Publicadores" asp-action="Inativos">
+                    Publicadores inativos
                 </a>
 
             </div>
