criei ambiente de produção

--- a/Views/Relatorios/Listar.cshtml
+++ b/Views/Relatorios/Listar.cshtml
@@ -39,7 +39,7 @@
         <div class="list-group-item list-group-item-action d-flex card mb-5" style="width: 18rem;">
             <div class="card-body">
                 <h6 class="card-subtitle mb-2 text-muted">@relatorio.Publicador.Nome</h6>
-                <h6 class="card-subtitle mb-2 text-muted">@relatorio.Publicador.Tipo</h6>
+                <h6 class="card-subtitle mb-2 text-muted">@JWForm.Controllers.RelatoriosController.GetEnumDescription(relatorio.Publicador.Tipo)</h6>
             </div>
             <ul class="list-group">
                 <li class="list-group-item list-group-item-secondary d-flex justify-content-between align-items-center"><strong>Data: @relatorio.Data.ToString("MM-yyyy")</strong></li>
