--- a/Views/Relatorios/Editar.cshtml
+++ b/Views/Relatorios/Editar.cshtml
@@ -4,12 +4,14 @@
     <h1 class="flex-grow-1">
         Editar Relatorio
     </h1>
+    <form asp-action="Apagar">
+        <input hidden asp-for="RelatorioId" />
+        <input type="submit" value="Apagar" class="btn btn-danger" />
+    </form>
 </div>
 <hr>
 
 <form asp-action="Editar" method="post">
-
-    <input hidden asp-for="RelatorioId" />
 
     <div class="container">
 
