--- a/Views/Relatorios/Apagar.cshtml
+++ b/Views/Relatorios/Apagar.cshtml
@@ -26,7 +26,7 @@
         </ul>     
     </div>
 </div>
-<form asp-action="Delete" class="form-group mt-5">
+<form asp-action="Apagar" class="form-group mt-5">
     <button type="submit" class="btn btn-primary"> Apagar</button>
     <a asp-action="listar" class="btn btn-light"> Cancelar</a>
 </form>
